# contynu

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  validation-prompt-codex.md
.github/workflows/: release.yml
crates/contynu-cli/: Cargo.toml
crates/contynu-cli/src/: main.rs  mcp_registration.rs  mcp_server.rs  update_check.rs
crates/contynu-cli/tests/: smoke.rs
crates/contynu-core/: Cargo.toml
crates/contynu-core/src/: adapters.rs  blobs.rs  checkpoint.rs  config.rs  discovery.rs  distiller.rs  error.rs  event.rs  files.rs  ids.rs  journal.rs  lib.rs  mcp.rs  pty.rs  rendering.rs  runtime.rs  state.rs  store.rs  text.rs
docs/: adapter-architecture.md  architecture.md  cli.md  contynu-technical-overview.md  crash-recovery.md  developer-setup.md  finalization-roadmap.md  handoff-summary.md  implementation-plan.md  rehydration.md  release-checklist.md  release-distribution.md
docs/adr/: 0001-core-runtime-and-storage.md
docs/schema/: event-envelope.md
docs/specs/: event-model.md  storage-model.md
schemas/: event-envelope.schema.json
scripts/: install.ps1  install.sh
site/: index.html  robots.txt  sitemap.xml
sql/: metadata_schema.sql
