[workspace]
members = [
  "crates/contynu-core",
  "crates/contynu-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Udonna Eke-Okoro"]
repository = "https://github.com/alentra-dev/contynu"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
globset = "0.4"
libc = "0.2"
similar = { version = "2.7", features = ["text"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.14"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }
walkdir = "2.5"
